Various minor fixups to display formatting, column management, etc. - Switch editor/admin buttons to small - make column breakpoints and wrapping work better - Add a publication link to publication listing

--- a/app/assets/stylesheets/secondary/presentations.scss
+++ b/app/assets/stylesheets/secondary/presentations.scss
@@ -1,3 +1,4 @@
 #operator {
   margin: 0 10px;
+  background-color: white; /* otherwise it looks weird on chrome mobile */
 }
